# xbrl-xsdtests

./: .gitignore  COPYRIGHT.md  LICENSE  NOTICE  README.md  build.sh  pyproject.toml
.github/workflows/: build.yml  release.yml  test.yml
msData/simpleType/: stE056.xsd  stE057.xsd  stE058.xsd  stE059.xsd  stE060.xsd  stE061.xsd  stE062.xsd  stE063.xsd  stE064.xsd  stE065.xsd
msMeta/: Additional_w3c.xml
saxonData/Complex/: complex027.xsd
saxonData/Override/: over015.xsd  over027.xsd
saxonData/Simple/: simple090.xsd  simple091.xsd  simple092.xsd  simple093.xsd  simple094.xsd  simple095.xsd
saxonMeta/: Override.testSet  Simple.testSet
src/xbrl_xsdtests/: __init__.py  __main__.py  dedup.py  emit.py  generate.py  manifest.py  model.py  parse.py  sources.py  typemap.py  xmlutil.py
tests/: conftest.py  test_dedup.py  test_emit_index.py  test_emit_instance.py  test_emit_taxonomy.py  test_generate.py  test_import.py  test_manifest.py  test_model.py  test_parse_instance.py  test_parse_schema.py  test_parse_testset.py  test_smoke.py  test_sources.py  test_typemap.py  test_value_transfer.py
tests/golden/: gen-QName-3411eea3.xsd  gen-decimal__minExclusive_-999.xsd  gen-string-b42bdb1f.xsd  gen-token-0c469a7c.xsd  instance-nil.xbrl  instance-nonnumeric.xbrl  instance-numeric.xbrl  instance-qname.xbrl
