[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xbrl-xsdtests"
version = "0.1.0"
description = "XBRL-flavored conformance suite generator from W3C XML Schema Test Suite (XSTS) datatype tests"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "arelle-release",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true
empty_parameter_set_mark = "fail_at_collect"
addopts = "--strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
packages = ["xbrl_xsdtests"]
mypy_path = "src"
